# clang2src

./: Cargo.toml  test_gen.dart
src/: generator_csharp.rs  generator_dart.rs  generator_go2.rs  lexer.rs  main.rs  meta.rs
tests/: liboauthtool.h  test_file.h
