[package]
name = "clang2src"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
lang-c = "0.14.0"
fancy-regex = "0.10.0"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.89"
mustache = "0.9.0"
tera = "1.17.1"
